# supergraph-demo-fed2

./: .gitignore  CODEOWNERS  LICENSE  Makefile  README.md  docker-compose.local-otel.yml  docker-compose.local.yml  docker-compose.managed.yml  docker-compose.otel-collector.yml  docker-compose.otel-zipkin.yml  docker-compose.router-custom-image.yml  docker-compose.router-custom-main-defer-ac.yml  docker-compose.router-custom-main-managed.yml  docker-compose.router-custom-main.yml  docker-compose.router-custom-plugin.yml  docker-compose.router-custom.yml  docker-compose.router-defer-ac.yml  docker-compose.router-managed.yml  docker-compose.router-otel.yml  docker-compose.router.yml  docker-compose.subgraphs-localhost.yml  docker-compose.yaml  docker-compose.yml  local.graphql  renovate.json  router.yaml  supergraph.graphql  supergraph.yaml
.circleci/: config.yml
.github/workflows/: local-gateway.yaml  local-router-basic.yaml  local-router-no-code.yaml  local-router-rhai.yaml  local-router-rust-dev.yaml  local-router-rust-main.yaml  local-router-rust-plugin.yaml  main-router-custom-image.yml  main-router-custom-main.yml  main-router-custom-plugin.yml  main-router-custom.yml  main-router.yml  main.yml  managed-router-custom-main.yml  managed-router.yml  managed.yml  studio-gateway.yaml  studio-router-basic.yaml  studio-router-no-code.yaml  studio-router-rust-dev.yaml  studio-router-rust-main.yaml
.scripts/: compose.sh  config.sh  deps-check.sh  docker-build-router.sh  docker-prune.sh  graph-api-env-export.sh  graph-api-env.sh  publish.sh  query.sh  smoke-defer-compressed.sh  smoke-defer.sh  smoke-router.sh  smoke.sh  subgraphs.sh  unpublish.sh  up-router-main.sh
.scripts/subgraphs/: docker-compose-networking.sh  localhost-networking.sh
client/defer-ac/: Dockerfile  apollo-client-3.7.0-beta.6.tgz  package.json
client/defer-ac/src/: App.css  App.js
client/defer/apollo-client/: Dockerfile  README.md  docker-compose.yaml  package.json
examples/: README.md
examples/advanced/router-dev/: Cargo.toml
examples/basic/: A.graphql  B.graphql
examples/complex_key/: A.graphql  README.md
examples/composition/: README.md
examples/composition/complex_key/: query.graphql
examples/cost_handling/: A.graphql  D.graphql  README.md  query.graphql
examples/efficient_parallels/: A.graphql  B.graphql  README.md  supergraph.yaml
examples/entity_in_list/: A.graphql  C.graphql  query.graphql  supergraph.yaml
examples/interface_simple/: README.md
examples/local/: README.md  docker-compose.gateway.yaml  docker-compose.router-basic.yaml  docker-compose.router-no-code.yaml  docker-compose.router-no-otel.yaml  docker-compose.router-rhai.yaml  docker-compose.router-rust-dev.yaml  docker-compose.router-rust-main.yaml  docker-compose.router-rust-plugin.yaml
examples/products/: README.md  query.graphql  supergraph.yaml
examples/provides/: B.graphql  README.md
examples/requires/: A.graphql  B.graphql  query.graphql
examples/studio/: README.md  docker-compose.router-basic.yaml  docker-compose.router-no-code.yaml  docker-compose.router-rhai.yaml  docker-compose.router-rust-dev.yaml  docker-compose.router-rust-main.yaml  docker-compose.router-rust-plugin.yaml
gateway/: Dockerfile  gateway.js  package.json
misc/: README.md
misc/advanced/router-dev/: Cargo.toml  Dockerfile  router.yaml
misc/local/: docker-compose.gateway.yaml  docker-compose.router-no-code.yaml  docker-compose.router-no-otel.yaml  docker-compose.router-rhai.yaml  docker-compose.router-rust-dev.yaml  docker-compose.router-rust-plugin.yaml
misc/studio/: docker-compose.gateway.yaml  docker-compose.router-no-code.yaml  docker-compose.router-rust-dev.yaml
opentelemetry/: collector-config.yml  docker-compose.otel.yaml  docker-compose.yaml  prometheus.yml  router.yaml
router/: Cargo.toml  Dockerfile  README.md  acme_router.yaml  configuration-local.yaml  configuration.yaml  install.sh  package.json  run.sh
router/custom-image/: Dockerfile  acme_router.yaml  install.sh
router/custom-image/rhai/: test.rhai
router/custom-main/: Cargo.toml  Dockerfile  router.yaml
router/custom-main/localhost/: router.yaml  supergraph.graphql
router/custom-main/src/: main.rs
router/custom-plugin/: Cargo.toml  Dockerfile  acme_router.yaml
router/custom-plugin/localhost/: compose.sh  router.yaml
router/custom-plugin/src/: hello_world.rs
router/src/: hello_world.rs
subgraphs/inventory/: Dockerfile  inventory.graphql  inventory.js  package.json
subgraphs/pandas/: Dockerfile  package.json  pandas.graphql  pandas.js
subgraphs/products/: Dockerfile  package.json  products.graphql  products.js
subgraphs/reviews/: .pdm.toml  Dockerfile  app.py  pyproject.toml  reviews.graphql  schema.py  tracing.py
subgraphs/users/: Dockerfile  package.json  users.graphql  users.js
supergraph/: README.md  router.yaml
supergraph/gateway/: Dockerfile  docker-compose.yaml  gateway.js  package.json
supergraph/router/: docker-compose.yaml  router.yaml
supergraph/router-no-code/: README.md
supergraph/router-rhai-script/: Dockerfile  router.yaml  test.rhai
supergraph/router-rust-plugin/: .gitignore  Cargo.toml  Dockerfile  router.yaml
supergraph/schema/: docker.graphql  docker.yaml  local.graphql  local.yaml
workbench/: README.md
workbench/schema-fed1/: supergraph-demo-fed1.apollo-workbench
workbench/schema-fed2/: supergraph-demo-fed2.apollo-workbench
(+46 files in other folders)
