[package]
name = "acme_router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
apollo-router = { git = "https://github.com/apollographql/router", tag = "v0.9.0" }
apollo-router-core = { git = "https://github.com/apollographql/router", tag = "v0.9.0" }
async-trait = "0.1.56"
futures = "0.3.21"
http = "0.2.8"
schemars = "0.8.10"
serde = "1.0.139"
serde_json = "1.0.82"
tokio = "1.20.0"
tower = { version = "0.4.13", features = ["full"] }