[package]
name = "acme_router"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
apollo-router = "1.0.0-rc.1"
async-trait = "0.1.57"
futures = "0.3.24"
http = "0.2.8"
schemars = "0.8.10"
serde = "1.0.144"
serde_json = "1.0.85"
tokio = "1.21.1"
tower = { version = "0.4.13", features = ["full"] }
tracing = "0.1"
