[package]
name = "acme_router"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
apollo-router = "1.44.0"
async-trait = "0.1.80"
futures = "0.3.30"
http = "0.2.12"
schemars = "0.8.16"
serde = "1.0.197"
serde_json = "1.0.115"
tokio = "1.37.0"
tower = { version = "0.4.13", features = ["full"] }
tracing = "0.1"
