[package]
name = "acme_router"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
apollo-router = "1.45.0"
async-trait = "0.1.80"
futures = "0.3.30"
http = "0.2.12"
schemars = "0.9.0"
serde = "1.0.200"
serde_json = "1.0.116"
tokio = "1.37.0"
tower = { version = "0.5.0", features = ["full"] }
tracing = "0.1.40"
