[package]
name = "acme_router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.80"
apollo-router = { git = "https://github.com/apollographql/router", branch = "dev" }
async-trait = "0.1.77"
futures = "0.3.30"
http = "0.2.12"
schemars = "0.8.16"
serde = "1.0.197"
serde_json = "1.0.114"
tokio = "1.36.0"
tower = { version = "0.4.13", features = ["full"] }
