[package]
name = "acme_router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.82"
apollo-router = { git = "https://github.com/apollographql/router", branch = "dev" }
async-trait = "0.1.80"
futures = "0.3.30"
http = "0.2.12"
schemars = "0.8.17"
serde = "1.0.200"
serde_json = "1.0.116"
tokio = "1.37.0"
tower = { version = "0.5.0", features = ["full"] }
